[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/pathofthebunny.png" type="Texture" id=1]
[ext_resource path="res://modules/grid/tile.gd" type="Script" id=2]
[ext_resource path="res://modules/grid/connector.tscn" type="PackedScene" id=3]

[node name="Tile" type="Control"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 32, 0, 32, 32 )

[node name="Line1" type="Sprite" parent="Background"]
position = Vector2( 16, 16 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 64, 0, 32, 32 )

[node name="Line2" type="Sprite" parent="Background"]
position = Vector2( 16, 16 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 96, 0, 32, 32 )

[node name="Line3" type="Sprite" parent="Background"]
position = Vector2( 16, 16 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 128, 0, 32, 32 )

[node name="Line4" type="Sprite" parent="Background"]
position = Vector2( 16, 16 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 160, 0, 32, 32 )

[node name="TopLeftConnector" parent="Background" instance=ExtResource( 3 )]
margin_left = 6.0
margin_right = 12.0

[node name="TopRightConnector" parent="Background" instance=ExtResource( 3 )]
margin_left = 20.0
margin_right = 26.0
connection_point = 1

[node name="RightTopConnector" parent="Background" instance=ExtResource( 3 )]
margin_left = 26.0
margin_top = 6.0
margin_right = 32.0
margin_bottom = 12.0
connection_point = 2

[node name="RightBottomConnector" parent="Background" instance=ExtResource( 3 )]
margin_left = 26.0
margin_top = 20.0
margin_right = 32.0
margin_bottom = 26.0
connection_point = 3

[node name="BottomRightConnector" parent="Background" instance=ExtResource( 3 )]
margin_left = 20.0
margin_top = 26.0
margin_right = 26.0
margin_bottom = 32.0
connection_point = 4

[node name="BottomLeftConnector" parent="Background" instance=ExtResource( 3 )]
margin_left = 6.0
margin_top = 26.0
margin_right = 12.0
margin_bottom = 32.0
connection_point = 5

[node name="LeftBottomConnector" parent="Background" instance=ExtResource( 3 )]
margin_top = 20.0
margin_bottom = 26.0
connection_point = 6

[node name="LeftTopConnector" parent="Background" instance=ExtResource( 3 )]
margin_top = 6.0
margin_bottom = 12.0
connection_point = 7

[node name="DebugLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
